--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 strategy:
   matrix:
     Python391:
-      python.version: '3.9'
+      python.version: '3.9.1'
 
 steps:
 - task: UsePythonVersion@0
@@ -21,7 +21,7 @@ steps:
 
 - script: |
     python -m pip install --upgrade pip
-    pip install -r requirements.txt
+    pip3 install -r requirements.txt
   displayName: 'Install dependencies'
 
 - script: |
